# aveirotechcity

./: .env  .gitignore  app.py  aveiro.html  data_insertion.py  exploratory.ipynb  helsinki.html  influxInteraction.py  init.sh  pyproject.toml
hackathon_air_meteo_noise_csv/: hackathon_air_antiga_reitoria_ua_aveiro_2023.csv  hackathon_air_biblioteca_municipal_aveiro_2023.csv  hackathon_air_bombeiros_velhos_aveiro_2023.csv  hackathon_air_capela nossa_sra_alegria_aveiro_2023.csv  hackathon_air_casa_morgados_pericosa_aveiro_2023.csv  hackathon_air_centro_congressos_aveiro_2023.csv  hackathon_air_ceta_aveiro_2023.csv  hackathon_air_refer_aveiro_2023.csv  hackathon_meteo_biblioteca_aveiro_2023.csv  hackathon_meteo_bombeiros_velhos_aveiro_2023.csv  hackathon_noise_antiga_reitoria_ua_aveiro_2023.csv  hackathon_noise_biblioteca_municipal_aveiro_2023.csv  hackathon_noise_bombeiros_velhos_aveiro_2023.csv  hackathon_noise_capela nossa_sra_alegria_aveiro_2023.csv  hackathon_noise_casa_morgados_pedricosa_aveiro_2023.csv  hackathon_noise_centro_congressos_aveiro_2023.csv  hackathon_noise_ceta_aveiro_2023.csv  hackathon_noise_refer_aveiro_2023.csv
static/: index.css  index.js
templates/: aveiro.html  image_template.html  index.js
